--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #282c34!important;
 }
+
+.btn-submit{
+  background-color:#56baed!important;
+  border:#56baed!important;
+}
