--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -4,5 +4,9 @@ footer {
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background-color: #f5f5f5;
+  background-color: #f8f9fa;
+}
+
+.text-footer{
+  color: #42426F!important;
 }
