--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,6 @@ a {
 }
 
 .btn-submit {
-  background-color: #56baed !important;
-  border: #56baed !important;
+  background-color: #7337d2 !important;
+  border: #7337d2 !important;
 }
